# structop

./: Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml
examples/: sentence_alignment_soft_dtw.rs  soft_dtw_shift_scan.rs  soft_path_attention.rs  user_journey_alignment.rs
src/: lib.rs  soft_dtw.rs  soft_shortest_path.rs
