[package]
name = "structop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
ndarray.workspace = true
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
